impostato il progetto per gestire solo utenti e chat, implementati due endpoint che controllano se utenti e chat richiesti da serv esterni ci sono
