# src/main/resources/openapi/users-api-definition-v3.0.yaml
@@ -10,8 +10,6 @@ tags:
     description: Operations about users
   - name: Chat
     description: Operations about Chat
-  - name: Missive
-    description: Operations about Missive
 paths:
   /users:
     get:
@@ -164,6 +162,46 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ValidationErrorDTO'
+  /user/valid/{id}:
+    get:
+      tags:
+        - Users
+      summary: 'check if a user is present'
+      description: 'check if a user is present'
+      operationId: checkUser
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: 'id of the user to check '
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: user present
+        '404':
+          description: user not present
+  /chat/valid/{id}:
+    get:
+      tags:
+        - Chat
+      summary: 'check if a chat is present'
+      description: 'check if a chat is present'
+      operationId: checkChat
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: 'id of the chat to check '
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: chat present
+        '404':
+          description: chat not present
   /chat:
     get:
       tags:
@@ -309,169 +347,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ValidationErrorDTO'
-  /missive:
-    get:
-      tags:
-        - Missive
-      summary: Find all Missive
-      description: 'return a page of Missive'
-      operationId: findAllMissive
-      parameters:
-        - name: pageSize
-          in: query
-          description: 'Limit number element for one page '
-          schema:
-            type: integer
-            format: int32
-        - name: numberOfPage
-          in: query
-          description: 'Number of page '
-          schema:
-            type: integer
-            format: int32
-        - name: descending
-          in: query
-          description: 'List order natural or reverse '
-          schema:
-            type: boolean
-        - name: sortBy
-          in: query
-          description: 'Sort list by value '
-          schema:
-            type: string
-        - name: senderId
-          in: query
-          description: 'Filter by senderId '
-          schema:
-            type: integer
-            format: int64
-        - name: receiverId
-          in: query
-          description: 'Filter by receiverId '
-          schema:
-            type: integer
-            format: int64
-        - name : text
-          in: query
-          description: 'Filter by text '
-          schema:
-            type: string
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MissivePageDTO'
-    post:
-      tags:
-        - Missive
-      summary: Add a new Missive
-      description: 'add an Missive on db'
-      operationId: addMissive
-      requestBody:
-        description: Missive object that needs to be added to the database
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/MissiveDTO'
-        required: true
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MissiveDTO'
-        '400':
-          description: Validation error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ValidationErrorDTO'
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/NotFoundErrorDTO'
-    put:
-      tags:
-        - Missive
-      summary: update an Missive
-      description: 'update an Missive on db'
-      operationId: updateMissive
-      requestBody:
-        description: Missive object that needs to be updated to the database
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/MissiveDTO'
-        required: true
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MissiveDTO'
-        '400':
-          description: Validation exception
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ValidationErrorDTO'
-  /missive/{id}:
-    delete:
-      tags:
-        - Missive
-      summary: delete a Missive
-      description: 'delete a Missive by id'
-      operationId: deleteMissive
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: 'id of the Missive to delete '
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: Missive deleted
-        '400':
-          description: Validation exception
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ValidationErrorDTO'
-    get:
-      tags:
-        - Missive
-      summary: get an Missive
-      description: 'get a Missive by id'
-      operationId: getMissive
-      parameters:
-        - name: id
-          in: path
-          required: true
-          description: 'id of the Missive to get '
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/MissiveDTO'
-        '400':
-          description: Validation exception
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ValidationErrorDTO'
 components:
   schemas:
     UserDTO:
@@ -510,21 +385,11 @@ components:
         address:
           type: string
           description: 'indirizzo dell utente'
-          #createdAt:
-            #type: string
-            #format: date-time
-            #description: 'data di creazione dell utente'
-          #updatedAt:
-            #type: string
-            #format: date-time
-            #description: 'data di ultima modifica dell utente'
-          #status:
-            #type: string
-            #description: 'indicatore se l account dell utente è attivo o disattivato'
-        matchedUsers:
+        matchedUsersIds:
           type: array
           items:
-            $ref: '#/components/schemas/UserDTO'
+            type: integer
+            format: int64
         chats:
           type: array
           items:
@@ -561,10 +426,11 @@ components:
         name:
           type: string
           description: 'nome della chat'
-        users:
+        usersIds:
           type: array
           items:
-            $ref: '#/components/schemas/UserDTO'
+            type: integer
+            format: int64
         createdAt:
           type: string
           format: date-time
@@ -573,11 +439,6 @@ components:
           type: string
           format: date-time
           description: 'data di ultima modifica della chat'
-        missives:
-          type: array
-          items:
-            $ref: '#/components/schemas/MissiveDTO'
-
     ChatPageDTO:
       type: object
       properties:
@@ -598,66 +459,6 @@ components:
         currentPage:
           type: integer
           description: 'Pagina corrente'
-
-    MissiveDTO:
-      type: object
-      properties:
-        id:
-          type: integer
-          format: int64
-          description: 'id univoco per il messaggio'
-        sender:
-          $ref: '#/components/schemas/UserDTO'
-        chat:
-          $ref: '#/components/schemas/ChatDTO'
-        text:
-          type: string
-          description: 'testo del messaggio'
-        createdAt:
-          type: string
-          format: date-time
-          description: 'data di creazione del messaggio'
-        updatedAt:
-          type: string
-          format: date-time
-          description: 'data di ultima modifica del messaggio'
-        sentAt:
-          type: string
-          format: date-time
-          description: 'data di invio del messaggio'
-        readAt:
-          type: string
-          format: date-time
-          description: 'data di lettura del messaggio'
-        deletedAt:
-          type: string
-          format: date-time
-          description: 'data di cancellazione del messaggio'
-        read:
-          type: boolean
-          description: 'indicatore se il messaggio è stato letto o meno'
-
-    MissivePageDTO:
-      type: object
-      properties:
-        items:
-          type: array
-          items:
-            $ref: '#/components/schemas/MissiveDTO'
-        totalItems:
-          type: integer
-          format: int64
-          description: 'Numero totale degli elementi'
-        itemsPerPage:
-          type: integer
-          description: 'Numero di elementi nella pagina corrente'
-        totalPages:
-          type: integer
-          description: 'Numero totale di pagine'
-        currentPage:
-          type: integer
-          description: 'Pagina corrente'
-
     ValidationErrorDTO:
       type: object
       properties:
@@ -675,4 +476,4 @@ components:
           description: 'nome del campo che ha generato l errore'
         message:
           type: string
-          description: 'messaggio di errore'
+          description: 'messaggio di error'
